psqlda db qo'shildi

--- a/.env
+++ b/.env
@@ -2,5 +2,11 @@
 # QUYIDAGI MA'LUMOTLARNI YOZING:
 
 ADMINS=984106361
-BOT_TOKEN=2091286188:AAEnHtBQUVrEGVdyT1P22lMrLLxeJUEYnrk
+BOT_TOKEN=6226150373:AAFV-OuAR1QrpDMv0zInBCJ-VQUrAK4Y1UM
 ip=localhost
+
+DB_USER=postgres
+DB_PASS=2007
+DB_NAME=telegram_bot
+DB_HOST=localhost
+DB_PORT=5432
