neon techda psql db qo'shildi

--- a/.env
+++ b/.env
@@ -5,8 +5,13 @@ ADMINS=984106361
 BOT_TOKEN=6226150373:AAFV-OuAR1QrpDMv0zInBCJ-VQUrAK4Y1UM
 ip=localhost
 
-DB_USER=postgres
-DB_PASS=2007
-DB_NAME=telegram_bot
-DB_HOST=localhost
-DB_PORT=5432
+DB_USER=usersdb_owner
+DB_PASS=6MBNWHx0yIUO
+DB_NAME=usersdb
+DB_HOST=ep-aged-bar-a56d3y00.us-east-2.aws.neon.tech
+
+
+; PGHOST='ep-aged-bar-a56d3y00.us-east-2.aws.neon.tech'
+; PGDATABASE='usersdb'
+; PGUSER='usersdb_owner'
+; PGPASSWORD='6MBNWHx0yIUO'
